Frankbelford/uatv1ba/force-app/main/default/objects/Email_Template_Mapping__mdt/Email_Template_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>All active and inactive custom email templates in Jobscience</description>
    <label>Email Template Mapping</label>
    <pluralLabel>Email Template Mapping</pluralLabel>
</CustomObject>