Frankbelford/uatv1ba/force-app/main/default/objects/Email_Template_Mapping__mdt/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <referenceTo>Brand__mdt</referenceTo>
    <relationshipLabel>Email Template Mapping</relationshipLabel>
    <relationshipName>Email_Template_Mapping</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>