Frankbelford/uatv1ba/force-app/main/default/objects/Email_Template_Mapping__mdt/fields/Brand_Logo__c.field-meta.xml
<CustomField>
    <fullName>Brand_Logo__c</fullName>
    <inlineHelpText>Static Resource Name where resource type is image. For Example Blue_Arrow_new_logo</inlineHelpText>
    <label>Brand Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>