Frankbelford/uatv1ba/force-app/main/default/objects/Email_Template_Mapping__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Brief description of what the template is used for.</description>
    <inlineHelpText>Brief description of what the template is used for.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>