Frankbelford/uatv1ba/force-app/main/default/objects/Email_Template_Mapping__mdt/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <description>Who receives the email</description>
    <inlineHelpText>Who receives the email</inlineHelpText>
    <label>Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Candidate</fullName>
                <default>true</default>
                <label>Candidate</label>
            </value>
            <value>
                <fullName>Candidate (Perm Only)</fullName>
            </value>
            <value>
                <fullName>Client Contact</fullName>
            </value>
            <value>
                <fullName>Internal - Back Office</fullName>
            </value>
            <value>
                <fullName>Internal - Branch</fullName>
            </value>
            <value>
                <fullName>Internal - IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>