Frankbelford/uatv1ba/force-app/main/default/objects/Email_Template_Mapping__mdt/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <description>When an email is sent. e.g. ad-hoc, 8pm every weekday, etc</description>
    <inlineHelpText>When an email is sent. e.g. ad-hoc, 8pm every weekday, etc</inlineHelpText>
    <label>Schedule</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>