Frankbelford/uatv1ba/force-app/main/default/objects/Email_Template_Mapping__mdt/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <inlineHelpText>SF record ID of the actual email template. This Filed value needs remain unchanged as it will be used to refer from code to identify appropriate template.</inlineHelpText>
    <label>TemplateId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>