Frankbelford/uatv1ba/force-app/main/default/objects/Email_Template_Mapping__mdt/fields/Trigger_Point__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Point__c</fullName>
    <description>Component from which the email template is triggered from.</description>
    <inlineHelpText>Component from which the email template is triggered from</inlineHelpText>
    <label>Trigger Point</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>