Frankbelford/uatv1ba/force-app/main/default/objects/Email_Template_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lightning Template</fullName>
                <default>true</default>
                <label>Lightning Template</label>
            </value>
            <value>
                <fullName>Coded in Flow</fullName>
            </value>
            <value>
                <fullName>Coded in Apex Class</fullName>
            </value>
            <value>
                <fullName>Classic Template</fullName>
            </value>
            <value>
                <fullName>Visualforce Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>