Frankbelford/uatv1ba/force-app/main/default/objects/Email_Template_Mapping__mdt/listViews/Email_Templates.listView-meta.xml
<ListView>
    <fullName>Email_Templates</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Brand__c</columns>
    <columns>Type__c</columns>
    <columns>Recipient__c</columns>
    <columns>Schedule__c</columns>
    <columns>TemplateId__c</columns>
    <columns>Trigger_Point__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Email Templates</label>
    <language>en_US</language>
</ListView>